--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+body{
+    background-color: rgba(255, 255, 255, 0.747);
+}
+h1 {
+    margin: 12px 0;
+    font-weight: 400;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+    margin: 0;
+}
+.wrapper_card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1200px;
+    justify-content: space-between;
+    margin: auto;
+    padding-top: 80px;
+    position: relative;
+}
+.button_switch{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    right: 0px;
+    top: 20px;
+    border: 0px;
+    background-color: rgb(200 200 200 / 0%);
+}
+.card {
+    height: 280px;
+    width: 301px;
+    background-color: whitesmoke;
+    
+    position: relative;
+    margin-bottom: 40px;
+    text-align: center;
+    
+    border: 1px;
+    border-radius: 5px;
+    box-shadow: 0px 12px 12px 0px rgba(0, 0, 0, .2);
+}
+.card_top {
+    position: absolute;
+    left: 40px;
+}
+.card_img {
+    width: 250px;
+}
+.card_bottom {
+    display: flex;
+    color: rgb(217, 68, 54);
+    align-items: center;
+    justify-content: space-around;
+    font-size: 24px;
+    position: absolute;
+    bottom: 15px;
+    width: 301px;
+}
+.card_button {
+    border: 2px solid rgb(217, 68, 54);
+    border-radius: 15px;
+    width: 120px;
+    height: 40px;
+    background: whitesmoke;
+    color: rgb(217, 68, 54);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.item {
+    width: 1200px;
+    background-color: whitesmoke;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 2px;
 
-.App-link {
-  color: #61dafb;
+    border: 1px;
+    border-radius: 5px;
+    overflow: hidden;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item_img {
+    width: 110px;
+    margin: -60px 70px -40px 0px;
+}
+.item_name {
+    width: 250px;
+}
+.item_color {
+    font-size: 14px;
+    width: 250px;
+    font-weight: 300;
+}
+.item_price {
+    color: rgb(217, 68, 54);
+    font-size: 18px;
+    width: 150px;
+}
+.item_button {
+    border: 2px solid rgb(217, 68, 54);
+    border-radius: 20px;
+    width: 120px;
+    height: 30px;
+    background: whitesmoke;
+    color: rgb(217, 68, 54);
+    margin: 0 40px;
+    font-weight: bold;
+    font-size: 12px;
 }
